@@ -66,8 +66,6 @@ TESTS = \
  t900 \
  t999
 
-XFAIL_TESTS += t801
-
 EXTRA_DIST = $(TESTS) \
  common common-i common-kn \
  compgate \
